--- a/controller_inventory_source_update.yml
+++ b/controller_inventory_source_update.yml
@@ -21,8 +21,8 @@
 
   - name: Update EC2 Dynamic Inventory via source ==> "{{ content_view }} {{ environment_name_expanded }}"
     ansible.controller.inventory_source_update:
-      name: "EC2 Dynamic Inventory"
-      inventory: "{{ content_view }} {{ environment_name_expanded }}"
+      name: "{{ content_view }} {{ environment_name_expanded }}"
+      inventory: "EC2 Dynamic Inventory"
       organization: Default
 
   #- name: Update "ALL {{ environment_name_expanded }}" inventory via source ==> "EC2 Dynamic Source - {{ content_view }} {{ environment_name_expanded }} - ALL"
