--- a/group_vars/control/job_templates.yml
+++ b/group_vars/control/job_templates.yml
@@ -341,24 +341,57 @@ controller_templates:
     notification_templates_success: Telemetry
     notification_templates_error: Telemetry
 
-  - name: CONVERT2RHEL / 01 - Take node snapshot
-    description: Take node snapshot - selection via EC2 instance tags
-    project: Automated Management
-    playbook: snapshot_instance.yml
+  - name: UTILITY / Snapshot Instance
+    description: Take node snapshot - selection via inventory group
+    project: Project Leapp
+    playbook: snapshot_instance_lvm.yml
     inventory: Workshop Inventory
-    limit: control
+    credentials:
+      - Workshop Credential
     extra_vars:
-      ec2_region: "{{ workshop_ec2_region }}"
-      instances:
-        tags:
-          short_name: node*
-          guid: "{{ lookup('env', 'AWX_HOST' ).split('.')[1] }}"
-          Student: "{{ lookup('env', 'AWX_HOST').split('.')[0] | urlsplit('hostname') }}"
+      lvm_snapshots_set_name: ripu01
+      lvm_snapshots_snapshot_autoextend_threshold: 70
+      lvm_snapshots_snapshot_autoextend_percent: 20
+      lvm_snapshots_boot_backup: true
+      lvm_snapshots_volumes:
+        - vg: VolGroup00
+          lv: rootVol
+          size: 3G
+        - vg: VolGroup00
+          lv: varVol
+          size: 5G
+        - vg: VolGroup00
+          lv: logVol
+          size: 500M
+        - vg: VolGroup00
+          lv: auditVol
+          size: 100M
+    survey_enabled: true
+    survey:
+      name: ''
+      description: ''
+      spec:
+        - question_name: Select inventory group
+          type: multiplechoice
+          variable: dynamic_inventory_group
+          choices: "{{ hostvars['satellite.example.com']['satellite_lifecycle_environments'] | list}}"
+          required: true
+        - question_name: Snapshot action
+          type: multiplechoice
+          variable: lvm_snapshots_action
+          choices:
+            - check
+            - create
+            - revert
+            - remove
+          required: true
+    ask_variables_on_launch: true
+    ask_limit_on_launch: true
     notification_templates_started: Telemetry
     notification_templates_success: Telemetry
     notification_templates_error: Telemetry
 
-  - name: CONVERT2RHEL / 02 - Upgrade OS to latest release
+  - name: CONVERT2RHEL / 01 - Upgrade OS to latest release
     description: Upgrade OS to latest available packages
     project: Automated Management
     playbook: upgrade_instance.yml
@@ -371,7 +404,7 @@ controller_templates:
     notification_templates_success: Telemetry
     notification_templates_error: Telemetry
 
-  - name: CONVERT2RHEL / 03 - convert2rhel
+  - name: CONVERT2RHEL / 02 - convert2rhel
     description: Convert OS to RHEL OS via targetted LE
     project: Automated Management
     playbook: c2r.yml
