--- a/group_vars/control/job_templates.yml
+++ b/group_vars/control/job_templates.yml
@@ -349,7 +349,7 @@ controller_templates:
     credentials:
       - Workshop Credential
     extra_vars:
-      lvm_snapshots_set_name: ripu01
+      lvm_snapshots_set_name: snap01
       lvm_snapshots_snapshot_autoextend_threshold: 70
       lvm_snapshots_snapshot_autoextend_percent: 20
       lvm_snapshots_boot_backup: true
