--- a/group_vars/control/job_templates.yml
+++ b/group_vars/control/job_templates.yml
@@ -374,7 +374,7 @@ controller_templates:
         - question_name: Select inventory group
           type: multiplechoice
           variable: dynamic_inventory_group
-          choices: "{{ hostvars['satellite.example.com']['satellite_lifecycle_environments'] | selectattr('name', 'match', '*') | map(attribute='name') | list}}"
+          choices: "{{ hostvars['satellite.example.com']['satellite_lifecycle_environments'] | selectattr('name', 'match', '.*') | map(attribute='name') | list}}"
           required: true
         - question_name: Snapshot action
           type: multiplechoice
