adjust survey variable name to match playbook

--- a/group_vars/control/job_templates.yml
+++ b/group_vars/control/job_templates.yml
@@ -689,7 +689,7 @@ controller_templates:
       spec:
         - question_name: Select inventory group
           type: multiplechoice
-          variable: rhel_inventory_group
+          variable: dynamic_inventory_group
           choices: "{{ hostvars['satellite.example.com']['satellite_lifecycle_environments'] | selectattr('name', 'match', '^RHEL.*$') | map(attribute='name') | list}}"
           required: true
     extra_vars:
