Work within Automated Managment project

--- a/group_vars/control/job_templates.yml
+++ b/group_vars/control/job_templates.yml
@@ -343,7 +343,7 @@ controller_templates:
 
   - name: UTILITY / Snapshot Instance
     description: Take node snapshot - selection via inventory group
-    project: Project Leapp
+    project: Automated Management
     playbook: snapshot_instance_lvm.yml
     inventory: Workshop Inventory
     credentials:
