Remove env_ prefix

--- a/group_vars/control/inventory_sources.yml
+++ b/group_vars/control/inventory_sources.yml
@@ -97,8 +97,7 @@ controller_inventory_sources:
       keyed_groups:
         - prefix: cv
           key: tags['ContentView']
-        - prefix: env
-          key: tags['ContentView'] ~ '_' ~ tags['Environment']
+        - key: tags['ContentView'] ~ '_' ~ tags['Environment']
         - prefix: os
           key: tags['satellite_operatingsystem_name']
         - prefix: AnsibleGroup
