--- a/setup_controller.yml
+++ b/setup_controller.yml
@@ -39,7 +39,17 @@
 
     - debug:
         msg: "{{ dynamic_development_source_vars }}"
-  
+
+# Allow projects to pull collections via collections/requirements.yml
+    - name: Turn on AWX_COLLECTIONS_ENABLED on controller
+      awx.awx.settings:
+        name: AWX_COLLECTIONS_ENABLED
+        value: true
+        controller_username: admin
+        controller_password: "{{ admin_password }}"
+        controller_host: "https://{{ student }}.{{ ec2_name_prefix }}.{{ workshop_dns_zone }}"
+        validate_certs: false
+
     - name: Call dispatch role
       ansible.builtin.include_role:
         name: infra.controller_configuration.dispatch
