--- a/group_vars/control/job_templates.yml
+++ b/group_vars/control/job_templates.yml
@@ -697,3 +697,22 @@ controller_templates:
       leapp_repos_enabled: []
     ask_variables_on_launch: true
     ask_limit_on_launch: true
+
+  - name: OS / Remediation
+    project: Automated Management
+    playbook: remediate.yml
+    inventory: EC2 Dynamic Inventory
+    credentials:
+      - Workshop Credential
+    survey_enabled: true
+    survey:
+      name: ''
+      description: ''
+      spec:
+        - question_name: Select inventory group
+          type: multiplechoice
+          variable: dynamic_inventory_group
+          choices: "{{ hostvars['satellite.example.com']['satellite_lifecycle_environments'] | selectattr('name', 'match', '.*') | map(attribute='name') | list }}"
+          required: true
+    ask_limit_on_launch: true
+...
