--- a/group_vars/control/job_templates.yml
+++ b/group_vars/control/job_templates.yml
@@ -623,6 +623,24 @@ controller_templates:
     notification_templates_error: Telemetry
     ask_variables_on_launch: true
 
+  - name: SETUP / Cockpit - Web Console
+    description: Install and configure Cockpit Web Console for all nodes
+    project: Automated Management
+    playbook: setup_cockpit.yml
+    inventory: Workshop Inventory
+    credentials:
+      - Workshop Credential
+    extra_vars:
+      ec2_region: "{{ workshop_ec2_region }}"
+      instances:
+        tags:
+          Workshop: "{{ lookup('env', 'AWX_HOST' ).split('.')[1] }}"
+      student: "{{ lookup('env', 'AWX_HOST').split('.')[0] | urlsplit('hostname') }}"
+      workshop_dns_zone: "{{ lookup('env', 'AWX_HOST').split('.',2)[2] }}"
+    notification_templates_started: Telemetry
+    notification_templates_success: Telemetry
+    notification_templates_error: Telemetry
+
   - name: INSIGHTS / Replace Satellite Manifest
     project: Automated Management
     playbook: insights_replace_satellite_manifest.yml
