--- a/setup_controller.yml
+++ b/setup_controller.yml
@@ -45,9 +45,7 @@
       awx.awx.settings:
         name: AWX_COLLECTIONS_ENABLED
         value: true
-        controller_username: admin
-        controller_password: "{{ admin_password }}"
-        controller_host: "https://{{ student }}.{{ ec2_name_prefix }}.{{ workshop_dns_zone }}"
+        controller_host: "{{ lookup('env', 'TOWER_HOST') }}"
         validate_certs: false
 
     - name: Call dispatch role
