--- a/leapp-remediate.yml
+++ b/leapp-remediate.yml
@@ -1,6 +1,6 @@
 ---
 - name: Remediate
-  hosts: "{{ rhel_inventory_group | default(omit) }}"
+  hosts: "{{ dynamic_inventory_group | default(omit) }}"
   strategy: free
   gather_facts: true
   become: true
