--- a/satellite_iac/leapp_7_to_8/content_views.yml
+++ b/satellite_iac/leapp_7_to_8/content_views.yml
@@ -15,6 +15,6 @@ satellite_content_views:
       product: Red Hat Enterprise Linux for x86_64
     - name: Red Hat Enterprise Linux 8 for x86_64 - AppStream RPMs 8.8
       product: Red Hat Enterprise Linux for x86_64
-    - name: Red Hat Satellite Client 6 for RHEL 8 Server RPMs x86_64
+    - name: Red Hat Satellite Client 6 for RHEL 8 x86_64 RPMs
       product: 'Red Hat Enterprise Linux Server'
 ...
