--- a/satellite_iac/leapp_7_to_8/content_views.yml
+++ b/satellite_iac/leapp_7_to_8/content_views.yml
@@ -16,5 +16,5 @@ satellite_content_views:
     - name: Red Hat Enterprise Linux 8 for x86_64 - AppStream RPMs 8.8
       product: Red Hat Enterprise Linux for x86_64
     - name: Red Hat Satellite Client 6 for RHEL 8 x86_64 RPMs
-      product: 'Red Hat Enterprise Linux Server'
+      product: 'Red Hat Enterprise Linux for x86_64'
 ...
