escape var via raw/endraw, add dnf-plugins-core

--- a/group_vars/control/job_templates.yml
+++ b/group_vars/control/job_templates.yml
@@ -716,10 +716,11 @@ controller_templates:
       satellite_activation_key_pre_leapp: 'RHEL7_Dev'
       satellite_activation_key_leapp: 'RHEL7IPU_Dev'
       leapp_repos_enabled:
-        - satellite-client-6-for-rhel-{{ ansible_distribution_major_version | int + 1 }}-x86_64-rpms
+        - {% raw %}'satellite-client-6-for-rhel-{{ ansible_distribution_major_version | int + 1 }}-x86_64-rpms'{% endraw %}
       analysis_packages_el7:
         - leapp-upgrade
         - cockpit-leapp
+        - dnf-plugins-core
     ask_variables_on_launch: true
     ask_limit_on_launch: true
 
