--- a/group_vars/control/job_templates.yml
+++ b/group_vars/control/job_templates.yml
@@ -760,7 +760,12 @@ controller_templates:
           required: true
     extra_vars:
       leapp_upgrade_type: satellite
-      leapp_repos_enabled: []
+      satellite_organization: 'Default_Organization'
+      satellite_activation_key_pre_leapp: 'RHEL7_Dev'
+      satellite_activation_key_leapp: 'RHEL7IPU_Dev'
+      satellite_activation_key_post_leapp: 'RHEL8_Dev'
+      leapp_repos_enabled:
+        - !unsafe 'satellite-client-6-for-rhel-{{ ansible_distribution_major_version | int + 1 }}-x86_64-rpms'
     ask_variables_on_launch: true
     ask_limit_on_launch: true
 ...
