--- a/leapp_remediate.yml
+++ b/leapp_remediate.yml
@@ -6,6 +6,11 @@
   become: true
   force_handlers: true
   tasks:
+    - name: Include randomized delay before beginning remediation
+      command: |
+        python3 -c 'import time;import random;zzzzz=random.uniform(15.0,30.0);time.sleep(zzzzz);print(zzzzz)'
+      delegate_to: localhost
+      connection: local
     - name: "Remediate rhel7 systems"
       when: ansible_distribution_major_version|int == 7
       ansible.builtin.import_tasks: remediate_rhel7.yml
