--- a/group_vars/control/execution_environments.yml
+++ b/group_vars/control/execution_environments.yml
@@ -1,6 +1,6 @@
 ---
 controller_execution_environments:
   - name: auto_satellite workshop execution environment
-    image: quay.io/s4v0/ee-automated-satellite-aap2:2.0.2
+    image: quay.io/acme_corp/auto_satellite_ee:latest
   - name: Insights execution environment
     image: quay.io/bdumont/automated-sm-ee
