--- a/collections/requirements.yml
+++ b/collections/requirements.yml
@@ -3,9 +3,12 @@ collections:
 - name: fedora.linux_system_roles
   version: ">=1.21.0" # Version range identifiers (default: ``*``)
   source: https://galaxy.ansible.com # The Galaxy URL to pull the collection from (default: ``--api-server`` from cmdline)
-- name: infra.leapp
-  version: "1.1.3" # Version range identifiers (default: ``*``)
-  source: https://galaxy.ansible.com # The Galaxy URL to pull the collection from (default: ``--api-server`` from cmdline)
+#- name: infra.leapp
+#  version: "1.1.3" # Version range identifiers (default: ``*``)
+#  source: https://galaxy.ansible.com # The Galaxy URL to pull the collection from (default: ``--api-server`` from cmdline)
+- name: https://github.com/heatmiser/ansible-leapp.git
+  type: git
+  version: 2024-01-07.01
 - name: infra.lvm_snapshots
   version: "1.1.2" # Version range identifiers (default: ``*``)
   source: https://galaxy.ansible.com # The Galaxy URL to pull the collection from (default: ``--api-server`` from cmdline)
