Add repository sync

--- a/setup_satellite_via_varsfiles.yml
+++ b/setup_satellite_via_varsfiles.yml
@@ -2,6 +2,11 @@
 - hosts: "{{ HOSTS | default('satellite.example.com') }}"
   connection: local
   gather_facts: false
+  vars:
+    satellite_validate_certs: false
+    async_timeout: 3600
+    async_delay: 15
+
   tasks:
     - name: Satellite deployment instrumentation
       ansible.builtin.uri:
@@ -23,4 +28,7 @@
         dir: config_as_code/satellite/leapp_7_to_8
 
     - ansible.builtin.include_tasks: setup_satellite_infra_subtasks.yml
+
+    - ansible.builtin.include_tasks: satellite_repository_sync_subtasks.yml
+      when: sync_repository | bool
 ...
