--- a/satellite_repository_sync_subtasks.yml
+++ b/satellite_repository_sync_subtasks.yml
@@ -16,14 +16,16 @@
     loop_control:
       loop_var: content_view
 
-  #- name: "Sync repositories with the CDN"
-  #  redhat.satellite.repository_sync:
-  #    validate_certs: "{{ satellite_validate_certs }}"
-  #    product: "{{ item }}"
-  #  loop: "{{ repos_to_sync }}"
-  #  async: "{{ async_timeout }}"
-  #  poll: "{{ async_delay }}"
-  #  register: async_update
+  - name: "Sync repositories with the CDN"
+    redhat.satellite.repository_sync:
+      validate_certs: "{{ satellite_validate_certs }}"
+      product: "{{ content_view.repositories | map(attribute='name') | list | unique }}"
+    with_items: "{{ satellite_content_views | default([]) }}"
+    loop_control:
+      loop_var: content_view
+    async: "{{ async_timeout }}"
+    poll: "{{ async_delay }}"
+    register: async_update
 
   rescue:
     - fail:
