--- a/satellite_hammer_task_resume.yml
+++ b/satellite_hammer_task_resume.yml
@@ -2,18 +2,6 @@
 - hosts: "{{ HOSTS | default('satellite.example.com') }}"
   become: true
   tasks:
-    - name: Satellite - resume paused/errored tasks
-      ansible.builtin.command: >-
-        hammer task resume
-      become: true
-      register: hammer_task_resume
-      ignore_errors: true
-
-    - name: Pause for 1 minute to allow paused/errored tasks to complete
-      ansible.builtin.pause:
-        minutes: 1
-
-    - name: hammer task resume output 
-      ansible.builtin.debug:
-        msg: "{{ hammer_task_resume }}"
+    - name: Satellite hammer tasks
+      ansible.builtin.include_tasks: satellite_hammer_task_resume_subtasks.yml
 ...
